# rsdl2.rs

./: Cargo.toml
src/: event.rs  key.rs  lib.rs  lock.rs  ptr.rs  time.rs  video.rs  window.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
