[package]
name = "rsdl2"
version = "0.2.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Simple DirectMedia Layer"
license = "Zlib"

[dependencies]
bitflags = "1.0"
drop-ptr = "0.1"
libc = { version = "0.2", default-features = false }
null-terminated = "0.2.7"

[dependencies.rsdl2-sys]
path = "sys"
version = "0.1"
